force-app/main/default/objects/Tax_Ops_Task_Log__c/Tax_Ops_Task_Log__c.object-meta.xml
<CustomObject>
    <label>Tax Ops Task Log</label>
    <nameField>
        <displayFormat>TOL-{00000000}</displayFormat>
        <label>Tax Ops Task Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Ops Task Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>