force-app/main/default/objects/Tax_Ops_Task_Log__c/fields/To_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>To_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>To Date Time</label>
    <type>DateTime</type>
</CustomField>